# cpp-nix-template

./: CMakeLists.txt  README.md  flake.nix
